# tao

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  RULES.md  tao.py
client/: CMakeLists.txt  client_network.cpp  client_network.h  main.cpp  renderer.cpp  renderer.h
docs/: protocol.md
game/: CMakeLists.txt  game_state.cpp  game_state.h  physics.cpp  physics.h
hooks/: pre-commit  pre-push
server/: CMakeLists.txt  leaderboard.cpp  leaderboard.h  main.cpp  match.cpp  match.h  server.cpp  server.h
shared/: CMakeLists.txt
shared/protocol/: message_types.h  messages.cpp  messages.h
shared/types/: constants.h  game_types.h
tests/: CMakeLists.txt  test_game_state.cpp  test_protocol.cpp
